<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/side_nav_bar"
        android:gravity="bottom"
        app:popupTheme="@style/Theme.CollegeScheduler.PopupOverlay" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/classRecyclerView"
            android:layout_width="410dp"
            android:layout_height="660dp"
            android:layout_marginTop="72dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/add_btn"
        style="@style/GradientFabRed"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/toast_descriptor"
        app:srcCompat="@drawable/baseline_add_24" />

    <TextView
        android:id="@+id/empty_classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_classes_yet"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:text="@string/title"
        android:textAlignment="viewStart"
        android:textColor="@color/cream"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/toolbar"
        app:layout_anchorGravity="center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>